
Changes:
 - Added resolveMaterial() to `StargateShape` (2D shapes) mirroring logic already present for 3D shapes.
 - Fallback defaults to WATER with warning log if an unknown material name is encountered.

Upgrade Guidance:
 Replace 1.0.2 jar with 1.0.3 if you encountered: "No enum constant org.bukkit.Material.STATIONARY_WATER" while loading shape files.

No data or config changes.

Wormhole X-Treme 1.0.2 (2025-09-05)
------------------------------------
Stability & completion pass for the modernization effort. Focus on database pooling reliability, listener/event API migration, legacy material & world handling, and permissions/config clean up.

Highlights:
 - Fixed database pool startup (HikariCP + embedded HSQLDB) by adding explicit driver dependency and disabling shade minimization so reflective classes (DataSource, SLF4J providers) are preserved.
 - Removed SLF4J relocation; simple logger binding now discovered without fallback NOP warning.
 - Converted remaining legacy Bukkit listener subclasses (BlockListener, ServerListener, VehicleListener) to modern Bukkit `Listener` + `@EventHandler` annotations.
 - Replaced deprecated numeric block ID methods (`getTypeId()`, `setTypeId*`) with Material / BlockData usage across gate activation, sign, lever, redstone, and portal fill logic.
 - Added backward-compatible material resolution for legacy shape files (maps STATIONARY_WATER/LAVA -> WATER/LAVA) preventing shape parse failures.
 - Normalized portal, iris, structure & light material defaults to modern enum constants (e.g. WATER instead of STATIONARY_WATER, NETHER_PORTAL instead of PORTAL when custom-set).
 - Simplified / updated command validation messages for customized materials (removed references to removed materials like GLOWING_REDSTONE_ORE, STATIONARY_*).
 - Hardened `StargateHelper` & `Stargate` serialization/deserialization: removed obsolete custom material ID persistence (writes -1 placeholders) and legacy world numeric ID usage.