@@ -74,8 +74,8 @@ LIGHT_TICKS = 1;
 
 # None of the follow materials are required, they will default if not set.
 # Portal material the material the [P] blocks will be when gate is active.
-# Suggested values are as follows: STATIONARY_WATER, STATIONARY_LAVA, PORTAL, and AIR
-PORTAL_MATERIAL=STATIONARY_WATER
+# Suggested values are as follows: WATER, LAVA, NETHER_PORTAL, or AIR
+PORTAL_MATERIAL=WATER
 
 # Iris material is the material the [P] block become when iris is active
 # Suggested values are as follows: STONE, DIAMOND_BLOCK, GLASS, IRON_BLOCK, BEDROCK, OBSIDIAN, GLOWSTONE and LAPIS_BLOCK
